fixed weird spacing

--- a/components/ExecutiveTeam/ExecutiveTeam.module.scss
+++ b/components/ExecutiveTeam/ExecutiveTeam.module.scss
@@ -34,14 +34,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 70rem;
+    width: 80%;
 }
 
 .Member {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 200px;
     width: calc(90% / 4 - 4rem);
     padding: 2rem;
 }
